Bug 1163961 - Browser API: Page search. r=kchen, r=ehsan