toolkit/modules/Finder.jsm
@@ -1048,3 +1048,6 @@ function GetClipboardSearchString(aLoadContext) {
 
   return searchString;
 }
+
+this.Finder = Finder;
+this.GetClipboardSearchString = GetClipboardSearchString;
